--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -43,7 +43,7 @@ jobs:
         uses: docker/setup-buildx-action@v2
 
       - name: Set up Docker Compose
-        uses: docker/compose-action@v2
+        uses: docker/compose-cli-action@v0.1.0
 
       - name: Build and Push Docker Images using Docker Compose
         run: |
