changing docker compose installation method

--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -59,14 +59,16 @@ jobs:
           docker-compose -f docker-compose.yml build || { echo "Docker Compose build failed"; exit 1; }
 
           # Tag and push backend image
-          docker tag naveen192/backend:latest naveen192/backend:${{ github.sha }}
-          docker push naveen192/backend:latest || { echo "Docker push failed"; exit 1; }
+          docker tag solution-devops-aize_backend:latest naveen192/backend:${{ github.sha }}
+          docker tag solution-devops-aize_backend:latest naveen192/backend:latest
           docker push naveen192/backend:${{ github.sha }} || { echo "Docker push failed"; exit 1; }
+          docker push naveen192/backend:latest || { echo "Docker push failed"; exit 1; }
 
           # Tag and push frontend image
-          docker tag naveen192/frontend:latest naveen192/frontend:${{ github.sha }}
-          docker push naveen192/frontend:latest || { echo "Docker push failed"; exit 1; }
+          docker tag solution-devops-aize_frontend:latest naveen192/frontend:${{ github.sha }}
+          docker tag solution-devops-aize_frontend:latest naveen192/frontend:latest
           docker push naveen192/frontend:${{ github.sha }} || { echo "Docker push failed"; exit 1; }
+          docker push naveen192/frontend:latest || { echo "Docker push failed"; exit 1; }
 
   deploy-dev:
     needs: build-and-push
