--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -31,6 +31,11 @@ jobs:
         run: |
           cd backend-service/src/test || exit 0
           pytest || echo "No tests found, skipping."
+      - name: Login to DockerHub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
 
   build-and-push:
     needs: test
