--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -61,19 +61,17 @@ jobs:
       - name: Build and Push Docker Images using Docker Compose
         run: |
           # Build the images using docker-compose
-          docker-compose -f docker-compose.yml build || { echo "Docker Compose build failed"; exit 1; }
+          docker-compose -f docker-compose.yml build --no-cache|| { echo "Docker Compose build failed"; exit 1; }
 
           # Tag and push backend image
-          docker tag solution-devops-aize_backend:latest naveen192/backend:${{ github.sha }}
-          docker tag solution-devops-aize_backend:latest naveen192/backend:latest
-          docker push naveen192/backend:${{ github.sha }} || { echo "Docker push failed"; exit 1; }
+          docker tag naveen192/backend:latest naveen192/backend:${{ github.sha }}
           docker push naveen192/backend:latest || { echo "Docker push failed"; exit 1; }
+          docker push naveen192/backend:${{ github.sha }} || { echo "Docker push failed"; exit 1; }
 
           # Tag and push frontend image
-          docker tag solution-devops-aize_frontend:latest naveen192/frontend:${{ github.sha }}
-          docker tag solution-devops-aize_frontend:latest naveen192/frontend:latest
-          docker push naveen192/frontend:${{ github.sha }} || { echo "Docker push failed"; exit 1; }
+          docker tag naveen192/frontend:latest naveen192/frontend:${{ github.sha }}
           docker push naveen192/frontend:latest || { echo "Docker push failed"; exit 1; }
+          docker push naveen192/frontend:${{ github.sha }} || { echo "Docker push failed"; exit 1; }
 
   deploy-dev:
     needs: build-and-push
