--- a/backend-service/Dockerfile
+++ b/backend-service/Dockerfile
@@ -2,7 +2,7 @@ FROM python:3.11.1
 
 WORKDIR /app
 
-COPY ../backend-service .
+COPY . .
 
 # Installing dependencies
 RUN pip3 install --upgrade pip && pip install --no-cache-dir -r requirements.txt
